--- a/templates/bootstrap_table.html
+++ b/templates/bootstrap_table.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <table id="data" class="table table-striped">
+<h1>Inventory</h1>
+<table id="data" class="table table-striped">
     <thead>
       <tr>
         <th>img</th>
@@ -11,7 +12,6 @@
         <th>color.id</th>
         <th>color</th>
         <th>qty</th>
-        <th>is_spare</th>
         {% for i in json_file['unit'] %}
           <th>Missing ({{ loop.index }})</th>
         {% endfor %}
@@ -19,6 +19,7 @@
     </thead>
     <tbody>
       {% for brick in inventory_file.results %}
+      {% if brick.is_spare == False %}
         <tr>
           <td><img src="{{ '/static/parts/'+brick.element_id+'.jpg' }}" style="height: 50px; width: auto;"></td>
           <td>{{ brick.element_id }}</td>
@@ -27,7 +28,6 @@
           <td>{{ brick.color.id }}</td>
           <td>{{ brick.color.name }}</td>
           <td>{{ brick.quantity }}</td>
-          <td>{{ brick.is_spare }}</td>
     	  {% for i in json_file['unit'] %}
         
     		  <td>
@@ -36,9 +36,64 @@
     			<input type="hidden" name="brick.part.part_num" value="{{ brick.part.part_num }}">
     			<input type="hidden" name="count" value="{{ i }}">
           <input type="hidden" name="index" value="{{ loop.index0 }}">
+          <input type="hidden" name="is_spare" value="{{ brick.is_spare }}">
     			<input type="hidden" name="brick.color.name" value="{{ brick.color.name }}">
     			{% for j in json_file['unit'][loop.index0]['bricks']['missing'] %}
     			  {% if j['brick']['ID'] == brick.part.part_num and j['brick']['color_name'] == brick.color.name %}
+
+			  {% if j['brick']['is_spare']|lower == brick.is_spare|lower %} 
+
+    			    {% set ns.count = j['brick']['amount'] %}
+			    {% endif %} 
+    			  {% endif %}
+    			{% endfor %}
+    			<input type="text" style="height:auto;width:40px" id="numberInput" name="numberInput" value={{ ns.count }}><button type="submit"><i class="fa fa-save"></i></button>
+    		      </form>
+    		  </td>
+    	  {% endfor %}
+        </tr>
+	{% endif %}
+      {% endfor %}
+    </tbody>
+  </table>
+
+  <h1>Spares</h1>
+  <table id="data" class="table table-striped">
+    <thead>
+      <tr>
+        <th>img</th>
+        <th>element_id</th>
+        <th>part_num</th>
+        <th>name</th>
+        <th>color</th>
+        <th>qty</th>
+        {% for i in json_file['unit'] %}
+	<th>Missing ({{ loop.index }})</th>
+        {% endfor %}
+      </tr>
+    </thead>
+    <tbody>
+      {% for brick in inventory_file.results %}
+      {% if brick.is_spare == True %}
+        <tr>
+          <td><img src="{{ '/static/parts/'+brick.element_id+'.jpg' }}" style="height: 50px; width: auto;"></td>
+          <td>{{ brick.element_id }}</td>
+          <td>{{ brick.part.part_num }}</td>
+          <td>{{ brick.part.name }}</td>
+          <td>{{ brick.color.name }}</td>
+          <td>{{ brick.quantity }}</td>
+    	  {% for i in json_file['unit'] %}
+        
+    		  <td>
+    			{% set ns = namespace(count='') %}
+			<form action="/{{ tmp }}/saveNumber" method="post">
+    			<input type="hidden" name="brick.part.part_num" value="{{ brick.part.part_num }}">
+    			<input type="hidden" name="count" value="{{ i }}">
+          <input type="hidden" name="index" value="{{ loop.index0 }}">
+          <input type="hidden" name="is_spare" value="{{ brick.is_spare }}">
+    			<input type="hidden" name="brick.color.name" value="{{ brick.color.name }}">
+    			{% for j in json_file['unit'][loop.index0]['bricks']['missing'] %}
+    			  {% if j['brick']['ID'] == brick.part.part_num and j['brick']['color_name'] == brick.color.name and j['brick']['is_spare']|lower == brick.is_spare|lower %}
     			    {% set ns.count = j['brick']['amount'] %}
     			  {% endif %}
     			{% endfor %}
@@ -47,8 +102,8 @@
     		  </td>
     	  {% endfor %}
         </tr>
+	{% endif %}
       {% endfor %}
     </tbody>
   </table>
-
 {% endblock %}
