--- a/templates/frontpage.html
+++ b/templates/frontpage.html
@@ -14,13 +14,13 @@
   .grid-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 20px;
-    padding: 20px;
+    gap: 10px;
+    padding: 10px;
   }
   
   .grid-item {
     border: 1px solid #ccc;
-    padding: 20px;
+    padding: 10px;
     box-sizing: border-box;
   }
   
@@ -38,12 +38,16 @@
 {% for i in set_list %}
 
 <div class="grid-item">
-	<img src="/static/sets/{{ i['set_num'] }}/cover.jpg" style="height: 150px; width: auto;" alt="Image">
+	<center><img src="/static/sets/{{ i['set_num'] }}/cover.jpg" style="height: 150px; width: auto;" alt="Image"></center>
 	<h2>{{ i['name'] }}</h2>
-	<p>Set: {{ i['set_num'] }}</p>
-	<p>Year: {{ i['year'] }}</p>
-	<p>Parts: {{ i['num_parts'] }}</p>
-	<p>Inventory: <a href="/{{ i['set_num'] }}">Link</a></p> 
+	<p>
+	<b>Set:</b> {{ i['set_num'] }}
+	<br>
+	<b>Year:</b> {{ i['year'] }}
+	<br>
+	<b>Parts:</b> {{ i['num_parts'] }}
+	<br>
+	<b>Inventory:</b> <a href="/{{ i['set_num'] }}">Link</a></p> 
 </div>
 
 {% endfor %}
