Fixed color and lightbox on no image

--- a/templates/frontpage.html
+++ b/templates/frontpage.html
@@ -130,13 +130,13 @@
 	<footer class="card-footer">
 	  <p class="card-footer-item">
 	    <span>
-	      <a href="/{{ i['set_num'] }}">Inventory</a>
+	      <a style="color: #363636;" href="/{{ i['set_num'] }}">Inventory</a>
 	    </span>
 	  </p>
 
 	  <p class="card-footer-item">
 	    <span>
-	      <a href="/{{ i['set_num'] }}">Instructions</a>
+	      <a style="color: #363636;" href="/{{ i['set_num'] }}">Instructions</a>
 	    </span>
 	  </p>
 	</footer>
