Fixed removing entry if missing is 0

--- a/templates/base.html
+++ b/templates/base.html
@@ -193,6 +193,17 @@ td img{
   max-height: 90%;
 }
 
+      /* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
 
 </style>
 
