--- a/templates/bootstrap_table.html
+++ b/templates/bootstrap_table.html
@@ -9,7 +9,7 @@
         <th></th>
         <th style="text-align:center;margin:0px;" class="fixed-width hidden-mobile">ID</th>
         <th class="fixed-width hidden-mobile">Name</th>
-        <th>Color</th>
+        <th class="fixed-width">Color</th>
         <th style="text-align: center;" class="fixed-width">Qty</th>
         {% for i in json_file['unit'] %}
 	  <th style="text-align: center;" class="fixed-width">Missing ({{ loop.index }})</th>
