Removed favicon error and fixed an issue where you could not wrote nothing in a text box and save it

--- a/templates/bootstrap_table.html
+++ b/templates/bootstrap_table.html
@@ -50,7 +50,7 @@
     			  {% endif %}
     			{% endfor %}
 			<div class='inputField'>
-	<input type="number" style="text-align:center;" id="numberInput" name="numberInput" value="{{ ns.count }}" pattern="\d+" required>
+	<input type="tel" style="text-align:center;" id="numberInput" name="numberInput" value="{{ ns.count }}" pattern="\d+">
 	<button class="square-button" type="submit">
 		<img src="/static/save.svg" alt="Save Icon">
 	</button>
@@ -115,7 +115,7 @@
             {% endif %}
           {% endfor %}
       <div class='inputField'>
-  <input type="number" style="text-align:center;" id="numberInput" name="numberInput" value="{{ ns.count }}" pattern="\d+" required>
+  <input type="tel" style="text-align:center;" id="numberInput" name="numberInput" value="{{ ns.count }}" pattern="\d+">
   <button class="square-button" type="submit">
     <img src="/static/save.svg" alt="Save Icon">
   </button>
